梳理函数库全部功能，准备release

--- a/demo/demo-global.html
+++ b/demo/demo-global.html
@@ -10,7 +10,7 @@
     
     <script src="../dist/index.aio.js"></script>
     <script>
-        console.log(jslib_base.name);
+        console.log(window['better-js-lib']);
     </script>
 </body>
 </html>
