--- a/demo/demo-amd.html
+++ b/demo/demo-amd.html
@@ -11,7 +11,7 @@
     <script src='./js/require.js'></script>
     <script>
         requirejs(['../dist/index.aio.js'], function (base) {
-            console.log(base.is.type(false, 'boolean'))
+            console.log(base.name)
         })
     </script>
 </body>
