--- a/demo/demo-global.html
+++ b/demo/demo-global.html
@@ -10,7 +10,7 @@
     
     <script src="../dist/index.aio.js"></script>
     <script>
-        console.log(window['better-js-lib']);
+        console.log(window['better-js-lib'].name);
     </script>
 </body>
 </html>
